--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>groupId</groupId>
-    <artifactId>puzzle</artifactId>
+    <artifactId>Puzzle</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
