--- a/pom.xml
+++ b/pom.xml
@@ -32,32 +32,7 @@
         <profile>
             <id>cli-dist</id>
             <build>
-                <finalName>${project.artifactId}-cli</finalName>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-assembly-plugin</artifactId>
-                        <version>2.4</version>
-                        <configuration>
-                            <archive>
-                                <manifest>
-                                    <mainClass>Puzzle</mainClass>
-                                </manifest>
-                            </archive>
-                            <descriptorRefs>
-                                <descriptorRef>jar-with-dependencies</descriptorRef>
-                            </descriptorRefs>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>cli-dist-assembly</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>single</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
+                <finalName>${project.artifactId}</finalName>
             </build>
         </profile>
     </profiles>
